@@ -232,6 +232,15 @@ bool DP_protocol_version_is_compatible(DP_ProtocolVersion *protover)
         || DP_protocol_version_is_past_compatible(protover);
 }
 
+bool DP_protocol_version_is_opaque_compatible(DP_ProtocolVersion *protover)
+{
+    return protover
+        && DP_str_equal(protover->ns, DP_PROTOCOL_COMPAT_VERSION_NAMESPACE)
+        && protover->server == DP_PROTOCOL_COMPAT_VERSION_SERVER
+        && protover->major == DP_PROTOCOL_COMPAT_VERSION_MAJOR
+        && protover->minor == DP_PROTOCOL_COMPAT_VERSION_MINOR;
+}
+
 static bool is_at_least_4_24_0(const DP_ProtocolVersion *protover)
 {
     return protover && DP_str_equal(protover->ns, DP_PROTOCOL_VERSION_NAMESPACE)
